# MimeDetector

./: .gitignore  CMakeLists.txt  MimeDetector.pro  README.md  requirements.txt
.github/workflows/: codeql-analysis.yml
docs/: _config.yml  index.md  mimedetector.html  mimedetector.js
src/: main.cpp  mainwindow.cpp  mainwindow.h  mimetypemodel.cpp  mimetypemodel.h
translations/: MimeDetector_de_DE.ts
